--- a/Ansible-Workshop-Files/ansible.cfg
+++ b/Ansible-Workshop-Files/ansible.cfg
@@ -1,2 +1,8 @@
 [defaults]
+interpreter_python = auto_silent
 inventory = ./inventory
+
+[privilege_escalation]
+become = true
+become_method = sudo
+become_user = root
