--- a/Ansible-Workshop-Files/04-register-variable.yaml
+++ b/Ansible-Workshop-Files/04-register-variable.yaml
@@ -1,13 +1,13 @@
 ---
-- name: "Playbook 4 - Play1 - Test register"
+- name: "Playbook 4 - Play 1"
   hosts: proxy
 
   tasks:
-  - name: "Register a variable"
-    ansible.builtin.shell: cat /etc/motd
-    register: motd_contents
+    - name: "Register a variable"
+      ansible.builtin.shell: cat /etc/motd
+      register: motd_contents
 
-  - name: "Use the variable in conditional statement"
-    ansible.builtin.shell: echo "motd contains the word hi"
-    when: motd_contents.stdout.find('hi') != -1
+    - name: "Use the variable in conditional statement"
+      ansible.builtin.shell: echo "motd contains the word hi"
+      when: motd_contents.stdout.find('hi') != -1
 ...
